kubernetes/apps/networking/opnsense/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opnsense
  namespace: networking
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx-internal
  rules:
    - host: &host opnsense.garb.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opnsense
                port:
                  number: 443
  tls:
    - hosts:
        - *host
      secretName: wildcard-cert-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apiserver
  namespace: networking
spec:
  ingressClassName: nginx-internal
  rules:
    - host: &host apiserver.garb.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apiserver
                port:
                  number: 443
  tls:
    - hosts:
        - *host
      secretName: wildcard-cert-tls
